// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocationsColumnConfiguration component should render column "category": category 1`] = `
<DocumentFragment>
  Cellular component
</DocumentFragment>
`;

exports[`LocationsColumnConfiguration component should render column "content": content 1`] = `
<DocumentFragment>
  Endoplasmic reticulum-Golgi intermediate compartment membrane
</DocumentFragment>
`;

exports[`LocationsColumnConfiguration component should render column "definition": definition 1`] = `
<DocumentFragment>
  The membrane surrounding the ER-Golgi intermediate compartment, which is a collection of tubulovesicular membrane clusters in the vicinity of ER exit sites.
</DocumentFragment>
`;

exports[`LocationsColumnConfiguration component should render column "gene_ontologies": gene_ontologies 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        class="external-link"
        href="//www.ebi.ac.uk/QuickGO/term/GO:0033116"
        rel="noopener"
        target="_blank"
      >
        endoplasmic reticulum-Golgi intermediate compartment membrane (GO:0033116)
        <test-file-stub
          data-testid="external-link-icon"
          width="12.5"
        />
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`LocationsColumnConfiguration component should render column "id": id 1`] = `
<DocumentFragment>
  <span
    class="no-wrap accession-view"
  >
    <a
      class="accession"
      href="/locations/SL-0099"
    >
      SL-0099
    </a>
  </span>
</DocumentFragment>
`;

exports[`LocationsColumnConfiguration component should render column "is_a": is_a 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/locations/SL-0162"
      >
        Membrane
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`LocationsColumnConfiguration component should render column "keyword": keyword 1`] = `<DocumentFragment />`;

exports[`LocationsColumnConfiguration component should render column "links": links 1`] = `<DocumentFragment />`;

exports[`LocationsColumnConfiguration component should render column "name": name 1`] = `
<DocumentFragment>
  Endoplasmic reticulum-Golgi intermediate compartment membrane
</DocumentFragment>
`;

exports[`LocationsColumnConfiguration component should render column "note": note 1`] = `<DocumentFragment />`;

exports[`LocationsColumnConfiguration component should render column "part_of": part_of 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/locations/SL-0098"
      >
        Endoplasmic reticulum-Golgi intermediate compartment
      </a>
    </li>
    <li>
      <a
        href="/locations/SL-0147"
      >
        Endomembrane system
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`LocationsColumnConfiguration component should render column "references": references 1`] = `<DocumentFragment />`;

exports[`LocationsColumnConfiguration component should render column "statistics": statistics 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/uniprotkb?query=%28cc_scl_term%3ASL-0099%29"
      >
        16,210 UniProtKB entries
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb?query=%28cc_scl_term%3ASL-0099%29+AND+%28reviewed%3Atrue%29"
      >
        236 reviewed UniProtKB entries
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb?query=%28cc_scl_term%3ASL-0099%29+AND+%28reviewed%3Afalse%29"
      >
        15,974 unreviewed UniProtKB entries
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`LocationsColumnConfiguration component should render column "synonyms": synonyms 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      ERGIC membrane
    </li>
    <li>
      ER-Golgi intermediate compartment membrane
    </li>
    <li>
      IC membrane
    </li>
    <li>
      Intermediate compartment membrane
    </li>
    <li>
      Vesiculo-tubular cluster membrane
    </li>
    <li>
      VTC membrane
    </li>
  </ul>
</DocumentFragment>
`;
